# aquerytest

./: README.md  setup.cfg
.github/workflows/: python-package.yml
aquerytest/: __init__.py  aquerytest.py
tests/: test_aquerytest.py
